--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "lodash.debounce": "^4.0.8",
+    "mammoth": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.4",
